# gamedao-astar

./: .editorconfig  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
.build/: HelloWorld.helloWorld.89ed50cec44a3db4.eth.deployed
docs/: report2.md  report3.md
pkg/contracts/: readme.md
pkg/contracts/config/: Cargo.toml  lib.rs
pkg/contracts/config/updated-config/: Cargo.toml
pkg/contracts/drip/: README.md
pkg/contracts/erc20/: lib.rs
pkg/contracts/sense/: Cargo.toml  lib.rs
pkg/gamedao/core/: Cargo.toml
pkg/gamedao/foobar/: Cargo.toml  lib.rs
pkg/helloworld/: HelloWorld.sol  readme.md
pkg/helloworld/.build/: HelloWorld.helloWorld.a88ce773ea44d764.eth.deployed  HelloWorld.sol.compiled
