[package]
name = "gamedao-core"
version = "0.1.0"
authors = ["marco <marco@zero.io>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0", default-features = false }
# bitvec = { version = "1", default-features = false, features = ["atomic", "alloc"] }

[dev-dependencies]
ink_e2e = { version = "5.0.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
